# docs-to-ledger

./: .gitignore  README.md  docs-to-ledger.example.yaml  docs-to-ledger.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: spec.md
docs_to_ledger/: archive.py  cli.py  config.py  discovery.py  documents.py  errors.py  fingerprint.py  ledger.py  matching.py  model.py  ocr.py  report.py  runner.py
docs_to_ledger/parsing/: __init__.py  csv_parser.py  locale.py  pdf_sg.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_discovery.py  test_documents.py  test_e2e.py  test_edge_cases.py  test_fingerprint.py  test_ledger.py  test_matching.py  test_model.py  test_parsing.py  test_runner.py  test_smoke.py
tests/fixtures/: docs-to-ledger.yaml  sample_sg.csv  sample_workbook.xlsx
