[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-to-ledger"
version = "0.1.0"
description = "Build per-account ledger workbooks from bank statements and matched documents"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "openpyxl>=3.1",
    "odfpy>=1.4",
    "pdfplumber>=0.10",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "rapidfuzz>=3.0",
]

[project.scripts]
docs-to-ledger = "docs_to_ledger.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.5",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["docs_to_ledger"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
